# dynsix

./: Cargo.toml  README.md
assets/systemd/: dynsix.service  dynsix.timer
src/: config.rs  main.rs
src/providers/: gandi.rs  mod.rs
