[package]
name = "dynsix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = "0.4"
env_logger = "0.10"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.29", features = ["full"] }
toml = "0.7"
